--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,7 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 dependencies {
+    implementation project(':react-native-image-helper')
     implementation project(':react-native-bottom-action-sheet')
     //implementation project(':react-native-android-fullscreen-webview-video')
     //implementation project(':react-native-webview')
@@ -173,10 +174,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-allprojects {
-    repositories {
-        maven { url 'https://jitpack.io' }
-    }
-}
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
