--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 apply from: '../node_modules/react-native-unimodules/gradle.groovy'
+include ':react-native-image-helper'
+project(':react-native-image-helper').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-helper/android')
 include ':react-native-bottom-action-sheet'
 project(':react-native-bottom-action-sheet').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottom-action-sheet/android')
 //include ':react-native-android-fullscreen-webview-video'
