--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-blur": "~8.0.0",
     "expo-font": "~8.0.0",
     "firebase": "^7.8.0",
+    "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
@@ -36,7 +37,8 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-header-buttons": "^3.0.4",
     "react-navigation-material-bottom-tabs": "^2.1.5",
-    "react-navigation-stack": "^2.0.16"
+    "react-navigation-stack": "^2.0.16",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
